--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,7 +3,10 @@ Type: Package
 Title: Life history analysis tools
 Version: 0.0.9000
 Date: 2019
-Authors@R: person("Jonathan", "Smart", email = "jonathan.smart@sa.gov.au", role = c("aut", "cre", "ctb"))
+Authors@R: person("Jonathan", "Smart", 
+    email = "jonathan.smart@sa.gov.au", 
+    role = c("aut", "cre", "ctb"),
+    comment = c(ORCID = "0000-0003-2070-3208"))
 Maintainer: Jonathan Smart <jonathan.smart@sa.gov.au>
 Description: A package to estimate shark life history using robust techniques.
 Encoding: UTF-8
