Importfrom Stats, na.omit added Global variables declared in package.R file TryCatch added to Estimate_Age_maturity() bootstrapping to avoid non convergence in iterations

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ importFrom(magrittr,"%>%")
 importFrom(plyr,ldply)
 importFrom(stats,glm)
 importFrom(stats,lm)
+importFrom(stats,na.omit)
 importFrom(stats,nls)
 importFrom(stats,nls.control)
 importFrom(stats,predict)
