--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -8,7 +8,7 @@ Authors@R: person("Jonathan", "Smart",
     role = c("aut", "cre", "ctb"),
     comment = c(ORCID = "0000-0003-2070-3208"))
 Maintainer: Jonathan Smart <jonathan.smart@sa.gov.au>
-Description: A package to estimate shark life history using robust techniques.
+Description: A package to estimate aquatic species life history using robust techniques.
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.3)
