--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -4,10 +4,10 @@ Title: Life history analysis tools
 Version: 1.0.4
 Date: 2019
 Authors@R: person("Jonathan", "Smart", 
-    email = "jonathan.smart@sa.gov.au", 
+    email = "jonsmartphd@gmail.com", 
     role = c("aut", "cre", "ctb"),
     comment = c(ORCID = "0000-0003-2070-3208"))
-Maintainer: Jonathan Smart <jonathan.smart@sa.gov.au>
+Maintainer: Jonathan Smart <jonsmartphd@gmail.com>
 Description: A package to estimate aquatic species life history using robust techniques.
 Encoding: UTF-8
 LazyData: true
@@ -23,7 +23,7 @@ Imports: plyr,
     dplyr,
     tidyr,
     ggplot2
-RoxygenNote: 7.1.1
+RoxygenNote: 7.2.3
 License: GPL-3
 Suggests: knitr,
     rmarkdown
