--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: AquaticLifeHistory
 Type: Package
-Title: Life history analysis tools
+Title: Life History Analysis Tools
 Version: 1.0.4
-Date: 2019
+Date: 2023-11-09
 Authors@R: person("Jonathan", "Smart", 
     email = "jonsmartphd@gmail.com", 
     role = c("aut", "cre", "ctb"),
