--- a/docs/pkgdown.yml
+++ b/docs/pkgdown.yml
@@ -1,7 +1,8 @@
-pandoc: 1.19.2.1
-pkgdown: 1.4.1
+pandoc: 3.1.2
+pkgdown: 2.0.7
 pkgdown_sha: ~
 articles:
   Growth_estimation: Growth_estimation.html
   Maturity_analyses: Maturity_analyses.html
+last_built: 2023-11-13T07:05Z
 
