Cran submission requests

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,6 +9,13 @@ Authors@R: person("Jonathan", "Smart",
     comment = c(ORCID = "0000-0003-2070-3208"))
 Maintainer: Jonathan Smart <jonsmartphd@gmail.com>
 Description: Estimate aquatic species life history using robust techniques.
+    This package supports users undertaking two types of analysis: 1) Growth from
+    length-at-age data, and 2) maturity analyses for length and/or age data.
+    Maturity analyses are performed using generalised linear model approaches incorporating
+    either a binomial or quasibinomial distribution.
+    Growth modelling is performed using the multimodel approach presented by
+    Smart et al. (2016) "Multimodel approaches in shark and ray growth studies:
+    strengths, weaknesses and the future" <doi:10.1111/faf.12154>.
 Encoding: UTF-8
 LazyData: true
 Depends: R (>= 3.3)
